--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
     implementation 'com.android.support:design:28.0.0-beta01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
+    implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
+    implementation files('libs/Volley.jar')
 }
