--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.beatle.parking">
 
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <!--<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />-->
+    <!-- <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" /> -->
+
 
     <!-- 请求网络 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -31,16 +31,17 @@
     <!-- 用于读取手机当前的状态 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <!--&lt;!&ndash; 更改设置 &ndash;&gt;-->
-    <!--<uses-permission android:name="android.permission.WRITE_SETTINGS" />-->
+    <!-- &lt;!&ndash; 更改设置 &ndash;&gt; -->
+    <!-- <uses-permission android:name="android.permission.WRITE_SETTINGS" /> -->
+
 
     <!-- 3.2.0版本增加 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!-- 3.2.0版本增加 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
-
     <application
+        android:name=".ParkingApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -53,8 +54,7 @@
             android:name="com.amap.api.v2.apikey"
             android:value="78ca1fe8c5a3a2d3a3beacd9704100b7" />
         <!-- 定位需要的服务 -->
-        <service android:name="com.amap.api.location.APSService"></service>
-
+        <service android:name="com.amap.api.location.APSService" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -63,28 +63,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".locationDemo.Location_Activity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
-
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".locationDemo.LastLocation_Activity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
-
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".locationDemo.Location_BackGround_Activity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".locationDemo.Jump2Amap_Activity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
-
-
-
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity android:name=".OrderActivity"></activity>
     </application>
 
 </manifest>
