--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation files('libs/httpclient-4.5.6.jar')
     implementation files('libs/httpclient-cache-4.5.6.jar')
     implementation files('libs/httpclient-win-4.5.6.jar')
-
+    implementation files('libs/android-async-http-1.4.3.jar')
 }
