--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
     implementation 'com.android.support:design:28.0.0-beta01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.google.code.gson:gson:2.2.4'
     implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
     implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
     implementation files('libs/Volley.jar')
