--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,9 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LaunchActivity" />
-        <activity android:name=".RetrievePwdActivity"></activity>
+        <activity android:name=".RetrievePwdActivity" />
+        <activity android:name=".ParkingDetails" />
+
     </application>
 
 </manifest>
