新建密钥，代码混淆及其它修改

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,29 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        debug {
+            storeFile file("NiceParking.keystore")
+            storePassword "niceparking"
+            keyAlias "NiceParking"
+            keyPassword "niceparking"
+        }
+
+    }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 }
