订单时间修改、忘记密码修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,8 @@
         <activity android:name=".activity.OrderResultActivity" />
         <activity android:name=".activity.OrderListActivity" />
         <activity android:name=".activity.ParkingRentingActivity"/>
-        <activity android:name=".activity.SettingActivity"></activity>
+        <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.UpdatePwdActivity"/>
 
     </application>
 
