--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,6 @@
         <!-- 定位需要的服务 -->
         <service android:name="com.amap.api.location.APSService" />
 
-
-
-
-
-
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -94,9 +89,9 @@
         <activity android:name=".activity.ParkingDetails" />
         <activity android:name=".activity.OrderResultActivity" />
         <activity android:name=".activity.OrderListActivity" />
-        <activity android:name=".activity.ParkingRentingActivity"/>
-        <activity android:name=".activity.SettingActivity"></activity>
-
+        <activity android:name=".activity.ParkingRentingActivity" />
+        <activity android:name=".activity.SettingActivity" />
+        <activity android:name=".activity.ServiceCenter"></activity>
     </application>
 
 </manifest>
